--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1665,8 +1665,8 @@
 		<de-DE>Kontrolliere fünf Berittene Einheiten</de-DE>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_FIVE_SIEGE</zType>
-		<de-DE>Kontrolliere fünf Belagerungs Einheiten</de-DE>
+		<zType>TEXT_GOAL_THREE_SIEGE</zType>
+		<de-DE>Kontrolliere drei Belagerungs Einheiten</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_TWO_RANGED_MOUNTED</zType>
