--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -8,6 +8,10 @@
 		<de-DE/>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROJECT_GIVE_SILK</zType>
+		<de-DE>Mit Seide versorgt</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_PROJECT_SWORD_CULT</zType>
 		<de-DE>Kult der Schwerter</de-DE>
 	</Entry>
