--- a/Translations/German/text-promotion-change.xml
+++ b/Translations/German/text-promotion-change.xml
@@ -162,6 +162,10 @@
 		<de-DE>Beladend</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROMOTION_MANEUVERS</zType>
+		<de-DE>Rangiert</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_PROMOTION_INGENUITY</zType>
 		<de-DE>Raffinesse</de-DE>
 	</Entry>
